<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">QiCheng</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_delete">删除</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>
    <string name="login_button">登录</string>
    <string name="register_button">注册</string>
    <string name="username_is_empty">请输入手机号码</string>
    <string name="password_is_empty">请输入密码</string>
    <string name="title_activity_main">行程</string>
    <string name="load_more">放开我就给你看更多</string>
    <string name="no_more">到底了，别拉了！</string>
    <string name="date_text">日期</string>
    <string name="yes_zh_text">是</string>
    <string name="no_zh_text">否</string>
    <string name="yes_en_text">Yes</string>
    <string name="no_en_text">No</string>
    <string name="year_text">年</string>
    <string name="month_text">月</string>
    <string name="day_text">日</string>
    <string name="time_sep_icon">:</string>
    <string name="update_check">检查新版本</string>
    <string name="no_update">您已是最新版本，无需更新</string>
    <string name="update_time_out">获取新版本超时，请稍后再试</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="select_text">筛选</string>
    <string name="query_text">搜索</string>
    <string name="search_hint_text">请输入关键字</string>
    <string name="city_btn_text">城市</string>
    <string name="train_btn_text">车次</string>
    <string name="fly_btn_text">航班</string>
    <string name="suggest_btn_text">推荐</string>
    <string name="place_btn_text">同城</string>
    <string name="station_btn_text">车站</string>
    <string name="airport_btn_text">机场</string>
    <string name="meet_btn_text">邂逅</string>
    <string name="newest_btn_text">最新</string>
    <string name="nearby_btn_text">附近</string>
    <string name="relation_btn_text">关联</string>
    <string name="all_text">全部</string>
    <string name="please_select_city_text">请选择城市</string>
    <string name="selected_city_text">您选择的城市为：</string>
    <string name="have_no_city_text">您当前没有与行程相关的城市</string>
    <string name="please_select_train_text">请选择车次</string>
    <string name="selected_train_text">您选择的车次为：</string>
    <string name="have_no_train_text">您当前没有与行程相关的车次</string>
    <string name="please_select_station_text">请选择车站</string>
    <string name="selected_station_text">您选择的车站为：</string>
    <string name="have_no_station_text">您选择的城市没有车站</string>
    <string name="age_text">岁</string>
    <string name="secret_text">保密</string>
    <string name="someone_activity_text">的动态</string>
    <string name="pwd_text">密码</string>
    <string name="pwd_hint_msg">请设置密码</string>
    <string name="illegal_cell_num_msg">请确认手机号是否正确</string>
    <string name="user_name_input_hint">输入手机号码</string>
    <string name="user_name_not_exist_err_msg">用户名不存在</string>
    <string name="phone_number_not_exist_err_msg">该手机未注册</string>
    <string name="user_invalid_err_msg">抱歉，该用户名已不可用</string>
    <string name="title_activity_register">注册</string>
    <string name="cell_num_already_exist_err_msg">手机号码已存在</string>
    <string name="nicky_name">昵称</string>
    <string name="gender_name">性别</string>
    <string name="age_name">生日</string>
    <string name="male_text">直男</string>
    <string name="female_text">软妹</string>
    <string name="portrait_name">头像</string>
    <string name="next_step">下一步</string>
    <string name="please_add_portrait">选择一张合适的照片，能帮助您在旅途中更快的结识TA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_memo_text">您将收到验证身份的短信。手机注册将有效避免垃圾广告、骚扰信息</string>
    <string name="get_verify_code_button">获取验证码</string>
    <string name="verify_code_send_success_msg">验证码已发送</string>
    <string name="verify_code_send_failed_msg">验证码发送失败</string>
    <string name="verify_code_hint">输入验证码</string>
    <string name="verify_code_expire_err_msg">验证码已过期，请重新获取</string>
    <string name="wrong_verify_code_err_msg">验证码错误，请重新输入</string>
    <string name="verify_code_wait_msg">秒后重新获取</string>
    <string name="mobile_prefix_text">+86</string>
    <string name="please_add_label">请加入您的个性标签</string>
    <string name="delete_selected">完成注册</string>
    <string name="already_add_label">已添加标签</string>
    <string name="portrait_save_failed">头像上传失败，请重试</string>
    <string name="nick_name_warning">请设置昵称</string>
    <string name="age_set_warning">请设置生日</string>
    <string name="portrait_set_warning">未设置头像</string>
    <string name="add_trip_text">添加行程</string>
    <string name="train_pick_activity_title">设置车次</string>
    <string name="station_select_activity_title">行程设置</string>
    <string name="train_code_title">车次</string>
    <string name="car_sharing_title">拼车</string>
    <string name="have_car_sharing_text">供车</string>
    <string name="wish_be_shared_text">求拼</string>
    <string name="travel_together_title">同游</string>
    <string name="stay_time_title">停留时间</string>
    <string name="no_trip_msg">没有更多行程</string>
    <string name="default_stay_time_value">1</string>
    <string name="no_such_train_err">车次不存在，请确认后再次输入</string>
    <string name="station_no_select_err">请选择出发和达到车站</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_coupon">福利</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="prompt">提示</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="resend">重发</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="expression">[表情]</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="voice">声音</string>
    <string name="recording_video">录制视频</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="temporary_does_not">暂不支持大于10M的视频！</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="session">会话</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="search">搜索</string>
    <string name="black_list">黑名单</string>
    <string name="search_new">搜</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Delete_the_contact">删除联系人</string>
    <string name="Move_into_the_blacklist_new">移入到黑名单</string>
    <string name="deleting">正在删除...</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="title_activity_contact">联系人</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="forward">转发</string>
    <string name="location_message">位置信息</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="traveller_activity_title">同路人</string>
    <string name="traveller_recommend_text">推荐</string>
    <string name="traveller_start_btn_text">出发</string>
    <string name="traveller_end_btn_text">到达</string>
    <string name="title_activity_personal_information">我的动态</string>
    <string name="title_activity_add_trip">AddTrip</string>
    <string name="label_not_unique_reject">标签重复</string>
    <string name="label_reject">标签添加失败</string>
    <string name="personal">个人信息</string>
    <string name="my_label">个人标签</string>
    <string name="my_photo">我的相册</string>
    <string name="my_activity">我的动态</string>
    <string name="select_setting">筛选设置</string>
    <string name="account_setting">账户设置</string>
    <string name="title_activity_label_modify">我的标签</string>
    <string name="title_activity_update_label">我的标签</string>
    <string name="commit_modify">提交修改</string>
    <string name="modify_label">修改标签</string>
    <string name="check_label">至少选择三个标签</string>
    <string name="personal_label_title">自定义标签</string>
    <string name="passenger_activity_title">同车人</string>
    <string name="passenger_recommend_text">推荐</string>
    <string name="passenger_not_on_btn_text">未上车</string>
    <string name="passenger_on_btn_text">车上</string>
    <string name="passenger_off_btn_text">已下车</string>
    <string name="social_fragment_title">关联</string>
    <string name="social_recommend_text">推荐</string>
    <string name="social_near_person_text">附近的人</string>
    <string name="social_relation_person_text">您的最新行程关联人</string>
    <string name="social_person_come_btn_text">来到</string>
    <string name="social_person_leave_btn_text">离开</string>
    <string name="social_person_not_on_btn_text">未上车</string>
    <string name="social_person_on_btn_text">车上</string>
    <string name="social_person_off_btn_text">已下车</string>
    <string name="title_activity_train_select">TrainSelectActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_activity_main">TestActivityMain</string>
    <string name="title_activity_test_activity_child">TestActivityChild</string>
    <string name="title_activity_chat">聊天</string>
    <string name="title_activity_welcome">启程</string>
    <string name="activity_title">动态</string>
    <string name="activity_search_text">筛选动态</string>
    <string name="activity_delete_text">删除</string>
    <string name="add_activity_text">添加动态</string>
    <string name="activity_newest_btn_text">关联</string>
    <string name="activity_nearby_btn_text">附近</string>
    <string name="update_button">确认</string>
</resources>