<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.qicheng.business.ui.PassengerActivity">
    <item
        android:id="@+id/gender"
        android:showAsAction="always"
        android:title="@string/select_text">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/gender_all"
                    android:icon="@drawable/ic_select_gender"
                    android:orderInCategory="1"
                    android:title="@string/all_text" />
                <item
                    android:id="@+id/male"
                    android:icon="@drawable/ic_select_male"
                    android:orderInCategory="2"
                    android:title="@string/male_text" />
                <item
                    android:id="@+id/female"
                    android:icon="@drawable/ic_select_female"
                    android:orderInCategory="3"
                    android:title="@string/female_text" />
            </group>
        </menu>
    </item>
</menu>
