<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.qicheng.business.ui.MainActivity">


    <item
        android:id="@+id/activity_title"
        android:title="@string/activity_newest_btn_text"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/city1"
                android:title="北京南" />
            <item
                android:id="@+id/city2"
                android:title="北京西" />
        </menu>

    </item>

    <item
        android:id="@+id/activity_search"
        android:title="@string/activity_search_text"
        android:icon="@drawable/search"
        android:showAsAction="always" />
    <item
        android:id="@+id/activity_add"
        android:title="@string/add_activity_text"
        android:icon="@drawable/ic_add_new"
        android:showAsAction="always" />

</menu>
