<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    >
    <LinearLayout
        style="@style/FormInputContainerWithBorder"
        android:layout_marginTop="@dimen/form_top_margin">
        <TextView
            android:layout_height="match_parent"
            android:text="@string/nicky_name"
            style="@style/InputTitle"/>
        <EditText
            android:id="@+id/editText_nickyName"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            style="@style/FormEdittext"
            android:nextFocusUp="@+id/editText_age"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        style="@style/FormInputContainerWithBorder">
        <TextView
            android:text="@string/age_name"
            style="@style/InputTitle"
            android:layout_height="match_parent"/>
        <EditText
            android:id="@+id/editText_age"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            style="@style/FormEdittext"
            android:editable="false"
            android:layout_weight="1"/>
       <!-- <ImageButton
            android:id="@+id/button_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_calander_on"
            android:maxHeight="39dp"/>-->
    </LinearLayout>

    <LinearLayout
        style="@style/FormInputContainer">
        <TextView
            android:text="@string/gender_name"
            style="@style/InputTitle"/>
        <RadioGroup
            android:id="@+id/radiobutton_gender"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="18dp"

           >
            <RadioButton
                android:id="@+id/radiobutton_male"
                android:layout_height="match_parent"
                android:checked="true"
                style="@style/GeneralRadioButton"
                android:text="@string/male_text"
                android:layout_weight="1"
                android:gravity="center"
                />
            <RadioButton
                android:id="@+id/radiobutton_female"
                android:layout_height="match_parent"
                android:checked="false"
                style="@style/GeneralRadioButton"
                android:text="@string/female_text"
                android:layout_weight="1"
                android:gravity="center"
                />
           </RadioGroup>
    </LinearLayout>
    <LinearLayout
        style="@style/FormInputContainer">
        <TextView
            android:text="@string/portrait_name"
            style="@style/InputTitle"/>
        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_user_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:border_width="1dp"
                app:border_color="@color/main"
                android:src="@drawable/ic_default_portrait"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main"
                android:textSize="15sp"
                android:text="@string/please_add_portrait"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/FormInputContainer">
        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_step"
            android:enabled="false"
            style="@style/NormalButton"/>
    </LinearLayout>

</LinearLayout>
