<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        style="@style/FormInputContainerWithBorder"
        android:layout_marginTop="@dimen/form_top_margin">
        <TextView
            android:layout_height="match_parent"
            android:text="@string/train_code_title"
            style="@style/InputTitle"/>
        <AutoCompleteTextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:id="@+id/editText_train_code"
            android:nextFocusUp="@+id/editText_date"
            style="@style/FormEdittext"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/FormInputContainerWithBorder"
        >
        <TextView
            android:text="@string/date_text"
            style="@style/InputTitle"
            android:layout_height="match_parent"/>
        <EditText
            android:id="@+id/editText_date"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            style="@style/FormEdittext"
            android:editable="false"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        style="@style/FormInputContainer">
        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_step"
            android:enabled="false"
            style="@style/NormalButton"/>
    </LinearLayout>

</LinearLayout>
